--- a/packrat/styles/keeper/pane.less
+++ b/packrat/styles/keeper/pane.less
@@ -228,11 +228,13 @@ a.kifi-pane-top-menu-a {
 .kifi-pane-x {
   position: absolute;
   z-index: 3;
-  bottom: 27px;
-  right: 9px;
+  bottom: 29px;
+  right: 6px;
   height: 25px;
   width: 25px;
   border: 1px solid rgba(0,0,0,.3);
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   background: linear-gradient(#fff, #f3f3f3) content-box;
   border-radius: 50%;
   &::before,
